bugfix: deletind datasets needs TR-Dataset
